created ExplanationTableViewCell, LogoForgotTableViewCell, PassRecoveryTableViewCell, SendButtonTableViewCell

--- a/INTITA/Modules/ForgotPassword/ForgotPassword.storyboard
+++ b/INTITA/Modules/ForgotPassword/ForgotPassword.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,112 +16,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="4zl-Fq-C9l">
-                                <rect key="frame" x="122" y="60" width="170" height="158"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="158" id="7mV-bi-oht"/>
-                                    <constraint firstAttribute="width" constant="170" id="Z6h-7C-V8K"/>
-                                </constraints>
-                            </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wBV-Vl-pen">
-                                <rect key="frame" x="167" y="192" width="80" height="2"/>
-                                <color key="backgroundColor" name="mainColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="2" id="LfS-Qf-AR6"/>
-                                    <constraint firstAttribute="width" constant="80" id="cBd-g9-3ub"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3r-QB-7BL">
-                                <rect key="frame" x="16" y="218" width="382" height="36"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="Yto-rr-fyX"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="24"/>
-                                <color key="textColor" red="0.29411764705882354" green="0.45882352941176469" blue="0.64313725490196072" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                                <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="met-Sw-jWv">
-                                <rect key="frame" x="24" y="262" width="366" height="96"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="96" id="Rav-y9-zWZ"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kps-id-amD">
-                                <rect key="frame" x="24" y="366" width="366" height="56"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="56" id="SwL-jH-Q8l"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QVc-1t-BPw">
-                                <rect key="frame" x="24" y="470" width="366" height="56"/>
-                                <color key="backgroundColor" name="mainColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="56" id="xGQ-gC-H6o"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="pressedSendButton:" destination="XyY-Qt-gEz" eventType="touchUpInside" id="mCE-Zh-22D"/>
-                                </connections>
-                            </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PDg-rx-Jpg">
-                                <rect key="frame" x="0.0" y="790" width="414" height="72"/>
-                                <color key="backgroundColor" name="mainColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="WWC-vz-7Op"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jJX-OU-6cg">
-                                <rect key="frame" x="24" y="426" width="366" height="12"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <color key="textColor" systemColor="systemRedColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X9T-Ud-TdW">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <sections/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="eSg-FT-avf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="jJX-OU-6cg" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" constant="24" id="4zH-TO-ldV"/>
-                            <constraint firstItem="4zl-Fq-C9l" firstAttribute="top" secondItem="eSg-FT-avf" secondAttribute="top" constant="16" id="5V0-gm-A1f"/>
-                            <constraint firstItem="eSg-FT-avf" firstAttribute="trailing" secondItem="Kps-id-amD" secondAttribute="trailing" constant="24" id="5aO-dY-BPb"/>
-                            <constraint firstItem="Kps-id-amD" firstAttribute="top" secondItem="met-Sw-jWv" secondAttribute="bottom" constant="8" id="5s5-zL-Sct"/>
-                            <constraint firstItem="QVc-1t-BPw" firstAttribute="top" secondItem="Kps-id-amD" secondAttribute="bottom" constant="48" id="7jm-VY-yco"/>
-                            <constraint firstItem="PDg-rx-Jpg" firstAttribute="bottom" secondItem="eSg-FT-avf" secondAttribute="bottom" id="97t-iR-IKa"/>
-                            <constraint firstItem="eSg-FT-avf" firstAttribute="trailing" secondItem="jJX-OU-6cg" secondAttribute="trailing" constant="24" id="9ah-UQ-68s"/>
-                            <constraint firstItem="wBV-Vl-pen" firstAttribute="centerX" secondItem="gwN-Y1-aDq" secondAttribute="centerX" id="DTl-US-cv0"/>
-                            <constraint firstItem="wBV-Vl-pen" firstAttribute="top" secondItem="eSg-FT-avf" secondAttribute="top" constant="148" id="IB5-Xk-Ou8"/>
-                            <constraint firstItem="met-Sw-jWv" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" constant="24" id="J17-zk-nof"/>
-                            <constraint firstItem="eSg-FT-avf" firstAttribute="trailing" secondItem="PDg-rx-Jpg" secondAttribute="trailing" id="TdJ-1x-lBw"/>
-                            <constraint firstItem="QVc-1t-BPw" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" constant="24" id="UDj-dp-W5c"/>
-                            <constraint firstItem="T3r-QB-7BL" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" constant="16" id="Vpv-02-FRH"/>
-                            <constraint firstItem="T3r-QB-7BL" firstAttribute="top" secondItem="wBV-Vl-pen" secondAttribute="bottom" constant="24" id="hND-Dz-fu7"/>
-                            <constraint firstItem="jJX-OU-6cg" firstAttribute="top" secondItem="Kps-id-amD" secondAttribute="bottom" constant="4" id="jnf-td-XBL"/>
-                            <constraint firstItem="PDg-rx-Jpg" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" id="kBe-93-Zdn"/>
-                            <constraint firstItem="4zl-Fq-C9l" firstAttribute="centerX" secondItem="gwN-Y1-aDq" secondAttribute="centerX" id="o93-XD-42S"/>
-                            <constraint firstItem="eSg-FT-avf" firstAttribute="trailing" secondItem="QVc-1t-BPw" secondAttribute="trailing" constant="24" id="qtc-6o-4sh"/>
-                            <constraint firstItem="eSg-FT-avf" firstAttribute="trailing" secondItem="met-Sw-jWv" secondAttribute="trailing" constant="24" id="tPU-TE-MMN"/>
-                            <constraint firstItem="met-Sw-jWv" firstAttribute="top" secondItem="T3r-QB-7BL" secondAttribute="bottom" constant="8" id="xBM-ye-uA2"/>
-                            <constraint firstItem="Kps-id-amD" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" constant="24" id="yD4-ho-Ms5"/>
-                            <constraint firstItem="eSg-FT-avf" firstAttribute="trailing" secondItem="T3r-QB-7BL" secondAttribute="trailing" constant="16" id="zth-2X-ogz"/>
+                            <constraint firstItem="eSg-FT-avf" firstAttribute="trailing" secondItem="X9T-Ud-TdW" secondAttribute="trailing" id="GQX-mS-cDk"/>
+                            <constraint firstItem="X9T-Ud-TdW" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" id="Yv7-As-Ksj"/>
+                            <constraint firstItem="X9T-Ud-TdW" firstAttribute="top" secondItem="eSg-FT-avf" secondAttribute="top" id="kKH-05-zJV"/>
+                            <constraint firstItem="eSg-FT-avf" firstAttribute="bottom" secondItem="X9T-Ud-TdW" secondAttribute="bottom" id="oKP-XF-VCG"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="blueLineView" destination="wBV-Vl-pen" id="Ka5-ql-ASx"/>
-                        <outlet property="emailTextField" destination="Kps-id-amD" id="9zq-Vl-yJ5"/>
-                        <outlet property="explanationTextLabel" destination="met-Sw-jWv" id="hdH-GZ-2FC"/>
-                        <outlet property="invalidTextLabel" destination="jJX-OU-6cg" id="NRa-Yk-WpJ"/>
-                        <outlet property="logoImageView" destination="4zl-Fq-C9l" id="P5C-J9-ZWC"/>
-                        <outlet property="recoveryLabel" destination="T3r-QB-7BL" id="ErP-Pn-KkL"/>
-                        <outlet property="sendButton" destination="QVc-1t-BPw" id="vXp-L3-yrm"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wg8-Fo-Vj0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -130,15 +38,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="837" height="213"/>
-        <namedColor name="mainColor">
-            <color red="0.29399999976158142" green="0.45899999141693115" blue="0.64300000667572021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
