--- a/INTITA/Modules/ForgotPassword/ForgotCells/LogoForgotTableViewCell.xib
+++ b/INTITA/Modules/ForgotPassword/ForgotCells/LogoForgotTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="LogoForgotTableViewCell" customModule="INTITA" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LogoForgotTableViewCell" id="KGk-i7-Jjw" customClass="LogoForgotTableViewCell" customModule="INTITA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="93"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,21 +20,21 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="7aQ-Sw-r9u">
                         <rect key="frame" x="29" y="0.0" width="317" height="90"/>
                         <color key="backgroundColor" name="mainColor"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="7aQ-Sw-r9u" secondAttribute="height" multiplier="327:93" id="sel-0Y-Bsr"/>
-                        </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="7aQ-Sw-r9u" secondAttribute="bottom" id="GeF-YU-z3c"/>
-                    <constraint firstAttribute="trailing" secondItem="7aQ-Sw-r9u" secondAttribute="trailing" constant="29" id="RGx-MH-3QX"/>
+                    <constraint firstAttribute="bottom" secondItem="7aQ-Sw-r9u" secondAttribute="bottom" id="8Hk-wq-Ewq"/>
                     <constraint firstItem="7aQ-Sw-r9u" firstAttribute="width" secondItem="7aQ-Sw-r9u" secondAttribute="height" multiplier="327:93" id="dNF-Pc-wTV"/>
-                    <constraint firstItem="7aQ-Sw-r9u" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="29" id="feN-p4-d5T"/>
-                    <constraint firstAttribute="trailing" secondItem="7aQ-Sw-r9u" secondAttribute="trailing" constant="29" id="oKy-vM-4PY"/>
-                    <constraint firstItem="7aQ-Sw-r9u" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="va9-70-wzJ"/>
+                    <constraint firstItem="7aQ-Sw-r9u" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="guv-oV-Br9"/>
+                    <constraint firstItem="7aQ-Sw-r9u" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="k20-6Q-uJb"/>
+                    <constraint firstAttribute="trailing" secondItem="7aQ-Sw-r9u" secondAttribute="trailing" constant="29" id="s5g-YU-oro"/>
+                    <constraint firstItem="7aQ-Sw-r9u" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="29" id="t4a-TM-2E7"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="logoImageView" destination="7aQ-Sw-r9u" id="NBH-l4-OhO"/>
+            </connections>
             <point key="canvasLocation" x="-196" y="54"/>
         </tableViewCell>
     </objects>
