--- a/INTITA/Modules/ForgotPassword/ForgotCells/SendButtonTableViewCell.xib
+++ b/INTITA/Modules/ForgotPassword/ForgotCells/SendButtonTableViewCell.xib
@@ -10,19 +10,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SendButtonTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SendButtonTableViewCell" id="KGk-i7-Jjw" customClass="SendButtonTableViewCell" customModule="INTITA" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5UG-XM-KEr">
-                        <rect key="frame" x="29" y="0.0" width="262" height="55"/>
+                        <rect key="frame" x="29" y="0.0" width="317" height="55"/>
                         <color key="backgroundColor" name="mainColor"/>
                         <state key="normal" title="Button">
                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
+                        <connections>
+                            <action selector="tappedSendButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="f2v-uP-nvW"/>
+                        </connections>
                     </button>
                 </subviews>
                 <constraints>
@@ -33,6 +36,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="sendButton" destination="5UG-XM-KEr" id="NRr-ke-Kgo"/>
+            </connections>
             <point key="canvasLocation" x="-196" y="54"/>
         </tableViewCell>
     </objects>
