--- a/INTITA/Modules/ForgotPassword/ForgotPassword.storyboard
+++ b/INTITA/Modules/ForgotPassword/ForgotPassword.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X9T-Ud-TdW">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="X9T-Ud-TdW">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <sections/>
@@ -31,6 +31,11 @@
                             <constraint firstItem="eSg-FT-avf" firstAttribute="bottom" secondItem="X9T-Ud-TdW" secondAttribute="bottom" id="oKP-XF-VCG"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="forgotTableView" destination="X9T-Ud-TdW" id="9oJ-tC-C8r"/>
+                        <outlet property="tableViewBottomConstraint" destination="oKP-XF-VCG" id="NXY-9L-8Vl"/>
+                        <outlet property="tableViewTopConstraint" destination="kKH-05-zJV" id="FgL-4Q-1oE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wg8-Fo-Vj0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
