--- a/INTITA/Modules/Profile/Cells/ProfileHeaderViewCell.xib
+++ b/INTITA/Modules/Profile/Cells/ProfileHeaderViewCell.xib
@@ -14,7 +14,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ProfileHeaderView" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" indentationWidth="10" reuseIdentifier="ProfileHeaderView" rowHeight="324" id="KGk-i7-Jjw" customClass="ProfileHeaderView" customModule="INTITA" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ProfileHeaderViewCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" indentationWidth="10" reuseIdentifier="ProfileHeaderViewCell" rowHeight="324" id="KGk-i7-Jjw" customClass="ProfileHeaderViewCell" customModule="INTITA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="474" height="324"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
