--- a/INTITA/Modules/ForgotPassword/ForgotCells/EmailTableViewCell.xib
+++ b/INTITA/Modules/ForgotPassword/ForgotCells/EmailTableViewCell.xib
@@ -10,14 +10,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EmailTableViewCell" rowHeight="99" id="KGk-i7-Jjw" customClass="EmailTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JM5-W8-DBo">
-                        <rect key="frame" x="29" y="1" width="317" height="55"/>
+                        <rect key="frame" x="29" y="0.0" width="317" height="55"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="55" id="Bzh-f1-2DM"/>
                         </constraints>
@@ -25,7 +25,7 @@
                         <textInputTraits key="textInputTraits"/>
                     </textField>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0IQ-gu-UHm">
-                        <rect key="frame" x="29" y="60" width="317" height="16"/>
+                        <rect key="frame" x="29" y="59" width="317" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="K9C-zd-ot9"/>
                         </constraints>
@@ -38,7 +38,7 @@
                     <constraint firstAttribute="trailing" secondItem="JM5-W8-DBo" secondAttribute="trailing" constant="29" id="Ds6-ny-bq6"/>
                     <constraint firstItem="JM5-W8-DBo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="29" id="FQ6-VV-vWZ"/>
                     <constraint firstItem="0IQ-gu-UHm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="29" id="OCe-gM-jT2"/>
-                    <constraint firstItem="JM5-W8-DBo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="1" id="nlm-YZ-XpM"/>
+                    <constraint firstItem="JM5-W8-DBo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="nlm-YZ-XpM"/>
                     <constraint firstItem="0IQ-gu-UHm" firstAttribute="top" secondItem="JM5-W8-DBo" secondAttribute="bottom" constant="4" id="p87-ZD-zeF"/>
                     <constraint firstAttribute="trailing" secondItem="0IQ-gu-UHm" secondAttribute="trailing" constant="29" id="str-bl-G1W"/>
                 </constraints>
