--- a/INTITA/Modules/Profile/Profile.storyboard
+++ b/INTITA/Modules/Profile/Profile.storyboard
@@ -24,22 +24,15 @@
                                     <constraint firstAttribute="height" constant="316" id="eut-oz-H0R"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UiQ-Fh-0Pg">
+                            <view autoresizesSubviews="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UiQ-Fh-0Pg">
                                 <rect key="frame" x="0.0" y="360" width="414" height="536"/>
-                                <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8Sk-rk-Jzs">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="502"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </tableView>
-                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="8Sk-rk-Jzs" firstAttribute="top" secondItem="UiQ-Fh-0Pg" secondAttribute="top" id="Ep3-Ni-f6K"/>
-                                    <constraint firstAttribute="trailing" secondItem="8Sk-rk-Jzs" secondAttribute="trailing" id="JJH-Ym-4vv"/>
-                                    <constraint firstItem="8Sk-rk-Jzs" firstAttribute="leading" secondItem="UiQ-Fh-0Pg" secondAttribute="leading" id="xmq-PT-fHg"/>
-                                </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8Sk-rk-Jzs">
+                                <rect key="frame" x="0.0" y="360" width="414" height="502"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="TJz-4L-rkG"/>
                         <color key="backgroundColor" name="mainColor"/>
@@ -47,11 +40,14 @@
                         <constraints>
                             <constraint firstItem="TJz-4L-rkG" firstAttribute="trailing" secondItem="CDt-01-LFA" secondAttribute="trailing" id="2t8-EC-YIe"/>
                             <constraint firstAttribute="bottom" secondItem="UiQ-Fh-0Pg" secondAttribute="bottom" id="5GT-r2-2td"/>
+                            <constraint firstItem="TJz-4L-rkG" firstAttribute="bottom" secondItem="8Sk-rk-Jzs" secondAttribute="bottom" id="DNL-4M-JOY"/>
                             <constraint firstItem="UiQ-Fh-0Pg" firstAttribute="top" secondItem="CDt-01-LFA" secondAttribute="bottom" id="FPT-J9-Tey"/>
+                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="top" secondItem="CDt-01-LFA" secondAttribute="bottom" id="VeZ-lG-ivg"/>
                             <constraint firstItem="TJz-4L-rkG" firstAttribute="trailing" secondItem="UiQ-Fh-0Pg" secondAttribute="trailing" id="f9j-G8-xIo"/>
+                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="leading" secondItem="UiQ-Fh-0Pg" secondAttribute="leading" id="fu2-Zb-Qma"/>
                             <constraint firstItem="CDt-01-LFA" firstAttribute="leading" secondItem="TJz-4L-rkG" secondAttribute="leading" id="hYl-dc-jXN"/>
                             <constraint firstItem="UiQ-Fh-0Pg" firstAttribute="leading" secondItem="TJz-4L-rkG" secondAttribute="leading" id="jaV-Mh-Vdv"/>
-                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="bottom" secondItem="TJz-4L-rkG" secondAttribute="bottom" id="x8P-9L-fSY"/>
+                            <constraint firstItem="8Sk-rk-Jzs" firstAttribute="trailing" secondItem="UiQ-Fh-0Pg" secondAttribute="trailing" id="of8-2y-Asy"/>
                             <constraint firstItem="CDt-01-LFA" firstAttribute="top" secondItem="TJz-4L-rkG" secondAttribute="top" id="y7y-gF-HPX"/>
                         </constraints>
                     </view>
@@ -60,6 +56,7 @@
                     <connections>
                         <outlet property="headerView" destination="CDt-01-LFA" id="gSu-hI-RIc"/>
                         <outlet property="tableView" destination="8Sk-rk-Jzs" id="FgA-pt-u98"/>
+                        <outlet property="tableViewWrapper" destination="UiQ-Fh-0Pg" id="Ihg-ka-qHg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YMc-U3-q87" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
